--- a/docs/intro.adoc
+++ b/docs/intro.adoc
@@ -1,5 +1,6 @@
 ## What is Quarkus?
 
+you username: {{ USER_NAME }}
 image::imgs/logo.png[]
 
 Quarkus is a Kubernetes Native Java stack tailored for GraalVM & OpenJDK HotSpot, crafted from the best of breed Java libraries and standards. Amazingly fast boot time, incredibly low RSS memory (not just heap size!) offering near instant scale up and high density memory utilization in container orchestration platforms like Kubernetes. Quarkus uses a technique called https://quarkus.io/vision/container-first[compile time boot] and offers a unified imperative and reactive programming model and a number of other developer features like Live Reload to bring _real joy to your development_.
@@ -7,7 +8,7 @@ Quarkus is a Kubernetes Native Java stack tailored for GraalVM & OpenJDK HotSpot
 ## Conventions
 You will see various code and command blocks throughout these exercises. Some of
 the command blocks can be copy/pasted directly. Others will require modification
-of the command before execution. If you see a command block with a red border
+of the command before execution, for example to add your unique user ID assigned by the instructor. If you see a command block with a red border
 (see below), the command will require slight modification.
 
 [source,none,role="copypaste copypaste-warning"]
