--- a/docs/basics.adoc
+++ b/docs/basics.adoc
@@ -95,7 +95,7 @@ Note the amazingly fast startup time! The app is now running "locally" (within t
 
 image::imgs/previewurl.png[]
 
-Click on this link to open the link in a new tab, which will access the default Quarkus HTML page included in this app:
+Click on this Preview link to open the link in a new tab, which will access the default Quarkus HTML page included in this app:
 
 image::images/defaultpage.png[]
 
@@ -118,6 +118,50 @@ Wow, how cool is that? Supersonic Subatomic live reload! Go ahead and change it 
 ====
 This will also listen for a debugger on port `5005`. If your want to wait for the debugger to attach before running you can pass `-Ddebug` on the command line. If you don’t want the debugger at all you can use `-Ddebug=false`. We'll use this later.
 ====
+
+### Stop the previous application
+
+Let's stop the original application so we can package and re-run it as an executable JAR. In the terminal, press `CTRL-C` to stop the application (some browsers don't support this command - simply close the Terminal using the 'X' button on the tab, which will also kill the running app).
+
+### Package the app
+
+Quarkus apps can be packaged as an executable JAR file or a native binary. We'll cover native binaries later, so for now, let's package as an executable JAR.
+
+Using the command palette, select _Build Executable JAR_. This runs `mvn package` under the hood, and when done produces 2 jar files in the `target/` directory:
+
+* `people-1.0-SNAPSHOT.jar` - containing just the classes and resources of the projects, it’s the regular artifact produced by the Maven build
+
+* `people-1.0-SNAPSHOT-runner.jar` - being an executable jar. Be aware that it’s not an über-jar as the dependencies are copied into the `target/lib` directory.
+
+## Opening new Terminals
+
+Several steps in this workshop require you to execute commands in a Terminal. To open a new Terminal window, simply right-click on the project name `quarkus-workshop-labs` in the project browser on the left and select **Open In Terminal**. This will open a new Terminal window and set the current directory to the project directory. You could also use the `+` button on the Terminal tabs area, but you would need to change the directory using `cd quarkus-workshop-labs` before executing commands.
+
+## Run the executable JAR
+
+Run the packaged application. In a Terminal, run the following command:
+
+[source, sh, role="copypaste"]
+----
+java -jar target/*-runner.jar
+----
+
+With the app running, open a separate terminal window, and ensure the app _is_ running by executing a `curl` command:
+
+[source, sh, role="copypaste"]
+----
+curl http://localhost:8080/hello
+----
+
+You should see:
+
+```console
+hola
+```
+
+## Cleanup
+
+Go back to the terminal in which you ran the app and stop the app by pressing `CTRL-C` (or close the Terminal).
 
 ## Congratulations!
 
